# flingern

./: .gitignore  README.md  flingern  flingern.py  main.py  pyproject.toml  requirements.txt  setup.py  shell.nix  venv.sh
.github/workflows/: deploysite.yml
fling/: defs.py  watchdog.py  website.py
flingern/: defs.py  images.py  main.py  util.py  watchdog.py  website.py
flingern/theme/partials/: content_gallery.pt  head.pt  header.pt  menu.pt
flingern/theme/public/: gallery.js  index.bundle.min.js  style.css
site/: site.yaml
site/content/: index.md
site/content/docs/: elements.md  gettingstarted.md
site/content/flingern/: other.md
site/flingern/: index.md  other.md
site/public/: index.html  other.html
theme/: page.html
theme/partials/: content_gallery.pt  footer.pt  head.pt  menu.pt  scripts.pt
theme/public/: gallery.js  style.css
